--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tabler/icons-svelte": "^2.40.0",
+		"theme-change": "^2.5.0"
+	}
 }
