--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.16",
 		"daisyui": "^3.9.4",
@@ -31,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tabler/icons-svelte": "^2.40.0",
+		"chart.js": "^4.4.0",
 		"theme-change": "^2.5.0"
 	}
 }
